--- a/tmpl/item.html
+++ b/tmpl/item.html
@@ -1,9 +1,10 @@
 <div class="input-group my-2">
-    <span class="input-group-addon">{{ . }}</span>
+    <span class="input-group-addon" style="min-width: 50%">{{ . }}</span>
     <button class="btn btn-primary btn-action btn-lg input-group-btn"
-        hx-get="/delete-item"
+        hx-post="/del_item"
         hx-target="closest div"
         hx-swap="delete"
+        hx-vals='{"item-name": "{{ . }}"}'
     >
         <i class="icon icon-cross">
             ::before
